# BOARR

./: CMakeLists.txt  README.md  package.xml
doc/: ComputeTheAvoidanceIndicators.md  TODO.md  UseTheWorldCreationPlugin.md  UseYourOwnAlgorithm.md
gazebo/benchmark_v1.0_worlds/: forest0.yaml  forest1.world  forest1.yaml  forest2.world  forest2.yaml  forest4.world  forest4.yaml  forest5.world  forest6.world  forest7.world  forest7.yaml  forest8.world  forest9.yaml
gazebo/benchmark_v2.0_worlds/: #forest0.yaml#  forest0.world  forest0.yaml  forest1.world  forest1.yaml  forest2.world  forest2.yaml  forest3.world  forest3.yaml  forest4.world  forest4.yaml  forest5.world  forest5.yaml  forest6.world  forest6.yaml  forest7.world  forest7.yaml  forest8.world  forest8.yaml  forest9.world  forest9.yaml
gazebo/gazebo_plugins/: CMakeLists.txt  README.md  RealSensePlugin.cpp  delete_plugin_in_worlds.sh  gazebo_ros_realsense.cpp  gazebo_wind_plugin.cc  gazebo_wind_plugin.h  gazebo_world_creation_plugin.cc  generate_forests.world
gazebo/geometric_worlds/: 2D_100.world  2D_150.world  2D_50.world  3D_100.world  3D_150.world  3D_50.world
gazebo/models/Moca/: model.config  model.sdf
gazebo/models/cylinder_x/: model.config  model.sdf
gazebo/models/cylinder_y/: model.sdf
gazebo/models/cylinder_z/: model.config  model.sdf
gazebo/models/heightmaps/: 0.img  1.img  2.img  3.img  4.img
gazebo/models/iris_realsense_d435/: iris_realsense_d435.sdf  model.config
gazebo/models/realsense_D435/: model.config  model.sdf
gazebo/models/trees/: 0.dae  0_bis.dae  1.dae  10.dae  11.dae  12.dae  13.dae  14.dae  15.dae  16.dae  17.dae  18.dae  19.dae  2.dae  3.dae  4.dae  5.dae  6.dae  7.dae  8.dae  9.dae
gazebo/worlds/: forest0.world  forest0.yaml  forest1.world  forest1.yaml  forest2.world  forest2.yaml  forest3.world  forest3.yaml  forest4.world  forest4.yaml  forest5.world  forest5.yaml  forest6.world  forest6.yaml  forest7.world  forest7.yaml  forest8.world  forest8.yaml  forest9.world  forest9.yaml  moca.world  moca.yaml
launch/: benchmark_px4_step1.launch  benchmark_px4_step2.launch  benchmark_step1.launch  benchmark_step2.launch  dummy_avoidance_algorithm.launch  perfect_benchmark_step1.launch  perfect_benchmark_step2.launch
modifiedFromRotorS/: APACHE2.0.differences  hummingbird.xacro  hummingbird_base.xacro  multirotor_base.xacro  spawn_mav.launch
param/: benchmark_manager_parameters.yaml  custom_parameters.yaml  perfect_benchmark_manager_parameters.yaml  px4_iris_params.txt
results/: statisticalAnalysis.m  statisticalAnalysis.py
scripts/: automatic_noisy_benchmark.sh  automatic_perfect_sensing_benchmark.sh  automatic_px4_benchmark.sh  dummy_noisy_benchmark.sh  dummy_perfect_sensing_benchmark.sh  init_px4_params.sh  one_test_noisy_benchmark.sh  one_test_perfect_sensing_benchmark.sh  one_test_px4_benchmark.sh
src/: my_sensors.xacro
src/benchmark_manager/: BenchmarkManager.cpp  BenchmarkManager.hpp  BenchmarkManager_ImageCreation.cpp  benchmark_manager_node.cpp  image_creation.cpp  test.cpp  test.hpp  test_node.cpp  util.cpp  util.hpp
src/dummy_avoidance_algorithm/: dummyAvoidance.cpp  dummyAvoidance.hpp  node.cpp  util.cpp  util.h
src/multi_mux/: multi_mux.py
src/noisy_realsense/: node.cpp  noisy_realsense.cpp  noisy_realsense.hpp
src/noisy_velodyne/: node.cpp  noisy_velodyne.cpp  noisy_velodyne.hpp
src/odom2posetwist/: odom2posetwist.py
