<?xml version="1.0"?>
<package>
  <name>avoidance_benchmark</name>
  <version>1.0.0</version>
  <description>The BOARR benchmark package</description>
  <license>BSD3</license>
  <maintainer email="thibaut.tezenas-du-montcel@gipsa-lab.fr">Thibaut Tezenas Du Montcel</maintainer>
  <maintainer email="amaury.negre@gipsa-lab.fr">Amaury Negre</maintainer>
  <author email="thibaut.tezenas-du-montcel@gipsa-lab.fr">Thibaut Tezenas Du Montcel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>topic_tools</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>topic_tools</run_depend>
</package>
